# ticket-system

./: README.md  docker-compose.yml  hello.py  pyproject.toml
auth-service/: dockerfile  requirements.txt
auth-service/app/: auth.db  auth.py  config.py  database.py  main.py  models.py  schemas.py
ticket-service/: dockerfile  requirements.txt
ticket-service/app/: database.py  main.py  models.py  schemas.py  ticket.db
user-service/: requirements.txt
user-service/app/: database.py  main.py  models.py  schemas.py
