[project]
name = "ticket-system"
version = "0.1.0"
description = "Ticket System with Microservices"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "mysql>=0.0.3",
    "passlib>=1.7.4",
    "pika>=1.3.2",
    "pymysql>=1.1.1",
    "python-jose>=3.4.0",
    "sqlalchemy>=2.0.41",
]
